--- a/adminPro/index.html
+++ b/adminPro/index.html
@@ -85,7 +85,7 @@
 				-moz-box-shadow: inset 0px 1px 4px #ECECEC;
 				-webkit-box-shadow: inset 0px 1px 4px #ECECEC;
 			}
-			.basic-grey input[type="number"]{
+			.basic-grey #enterCheck{
 				margin-top: -1px;
 				width: 40%;
 				float: left;
@@ -113,7 +113,7 @@
 
 	<body>
 		<form action="" method="post" class="basic-grey">
-			<h1>Contact Form
+			<h1>admin
 				<span>Please fill all the texts in the fields.</span>
 			</h1>
 			<label>
@@ -126,7 +126,7 @@
 			</label>
 			<label class="clearfix">
 				<span>验证码 :</span>
-				<input id="enterCheck" type="number" name="enterCheck" placeholder="" />
+				<input id="enterCheck" type="text" name="enterCheck" placeholder="" />
 				<div class="checkEnter">
 					<img src="img/code.html"/>
 				</div>
