--- a/adminPro/index.html
+++ b/adminPro/index.html
@@ -128,7 +128,7 @@
 				<span>验证码 :</span>
 				<input id="enterCheck" type="text" name="enterCheck" placeholder="" />
 				<div class="checkEnter">
-					<img src="img/code.html"/>
+					<img src="src/img/code.html"/>
 				</div>
 			</label>
 			<label>
