--- a/games/find-package/index.html
+++ b/games/find-package/index.html
@@ -8,12 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="./game.css">
 </head>
 <body>
-	<audio src="./music/bg.wav" autoplay loop></audio>
+	<audio src="./music/bg.wav" loop></audio>
 	<div class="pk"></div>
 	<div class="clock"></div>
 	<img class="top-btn" src="./img/game-start.png"></img>
-	<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-	<script src="./jquery.easing.1.3.min.js"></script>
-	<script src="./reGame.js"></script>
+	<script src="./js/jquery.min.js"></script>
+	<script src="./js/jquery.easing.1.3.min.js"></script>
+	<script src="./js/reGame.js"></script>
 </body>
 </html>
