enemy fly added

--- a/games/hit-plane/reindex.html
+++ b/games/hit-plane/reindex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
@@ -10,11 +10,22 @@
         #map{
             display: block;
         }
+        .stop{
+            position: absolute;
+            top: 0;
+            left: 0;
+            line-height: 35px;
+            width: 100px;
+            height: 35px;
+            text-align: center;
+            border: 1px solid black;
+        }
     </style>
 </head>
 <body>
     <!--游戏地图-->
-    <canvas id="map"></canvas>
+    <canvas id="map">您的浏览器不支持canvas</canvas>
+    <div class="stop">stop</div>
     <!--加载-->
     <!-- <div id="loading">
         <img src="img/loading.gif" />
