hit-plane finish

--- a/games/hit-plane/index.html
+++ b/games/hit-plane/index.html
@@ -17,7 +17,7 @@
 			/*图片下方有空白的原因: 默认图片是基线对齐*/			
 			body {
 				/*方式1*/
-				/*font-size: 0;*/
+				font-size: 0;
 			}			
 			#map {
 				/*方式2*/
