--- a/adminPro/home.html
+++ b/adminPro/home.html
@@ -99,7 +99,7 @@
 				},
 				'sendRecord': {
 					templateUrl: './src/page/sendRecord.html',
-					controller: './src/js/sendRecord.js'
+					controller: './src/js/pages/sendRecord.js'
 				},
 				'getRecord': {
 					templateUrl: './src/page/getRecord.html',
