--- a/vue-router/index.html
+++ b/vue-router/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html style="font-size:10px;">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-project</title>
-    <style>
-      body{
-        background-color: #efefef;
-      }
-    </style>
   </head>
   <body>
     <div id="app"></div>
